@@ -20,6 +20,7 @@ Version 1.7.6+svn:
    * In unit list, display invisibility status and change order of columns
    * Update the mouse position after closing a dialog, so the dialog below
      'knows' the proper mouse location
+   * Fix double click events to be send to the wrong window
  * WML engine:
    * Added 'side Y turn' and 'side Y turn X' events
    * Make status "hidden=yes" default, no need to do it manually in WML anymore
